Updated HTML elements and CSS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,33 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    
+    <div class="main-container">
+        <div class="sub-container">
+            <div class="form-container">
+                <form class="duck-form" action="">
+                    <label for="full-name" class="label-name">FULL NAME</label>
+                    <input type="text" class="name" name="full-name">
+                    <label for="email" class="label-email" aria-placeholder="Your Email">EMAIL</label>
+                    <input type="email" name="email" class="email" id="email" placeholder="Your email">
+                    <label for="message-regarding" class="label-msg-regarding">MESSAGE REGARDING</label>
+                    <select name="message-regarding" class="msg-regarding" id="message-regarding">
+                        <option>A</option>
+                        <option>B</option>
+                    </select>
+                    <label for="message" class="label-message">MESSAGE</label>
+                    <textarea name="message" col="5" rows="5" class="message" placeholder="Your message"></textarea>
+                    <button type="submit" class="form-button">SEND MESSAGE</button>
+                </form>
+            </div>
+            <div class="duck-image">
+                <img src="/images/hiclipart 2.png" alt="Yellow duck">
+            </div>
+            <div class="side">
+
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
